--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
     <meta content="Gildas Decauville Lachènée" name="author">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive.css">
     <link rel="stylesheet" href="css/fonts.css">
-
-   <!--<link rel="stylesheet" href="css/responsive.css">-->
-
 </head>
 <body>
     <section id="home">
@@ -61,39 +59,38 @@
                         <h3 class="p1">Des activités exercées pour les professionnels et les particuliers</h3>
                     </div>
                 </div>
-                <div class="row no-gutters">
-                        <div class="col-md-4 col-lg col-xl b1">
-                            <h5 class="p2">Costumière de scène, Styliste, Couturière</h5>
-                            <p class="p3">
-                                Lorem ipsum dolor sit amet,<br> consectetur adipisicing elit,<br> 
-                                por incididunt ut labore...<br>
-                                <button class="clair">EN SAVOIR PLUS</button>
-                            </p>
-                        </div>
-                        <div class="col-md-4 col-lg col-xl b2">
-                            <h5 class="p2">Créatrice de chapeaux, coiffes et accessoires</h5>
-                            <p class="p3">
-                                Lorem ipsum dolor sit amet,<br> consectetur adipisicing elit,<br> 
-                                por incididunt ut labore...<br>
-                                <button class="clair">DÉCOUVRIR</button>
-                            </p>
-                        </div>
-                        <div class="col-md-4 col-lg col-xl b3">
-                            <h5 class="p2">Formatrice et Animatrice d'ateliers</h5>
-                            <p class="p3">
-                                Lorem ipsum dolor sit amet,<br> consectetur adipisicing elit,<br> 
-                                por incididunt ut labore...<br>
-                                <button class="clair">VOIR LES DATES</button>
-                            </p>
-                        </div>
-                    
+                <div class="row">
+                    <div class="col-md-4 col-lg-4 col-xl b1">
+                        <h5 class="p2">Costumière de scène, Styliste, Couturière</h5>
+                        <p class="p3">
+                            Lorem elitipsum por il dolor sit amet, consectetur par adipisicing elit,  
+                            por le incididunt vous camut labore...<br>
+                            <button class="clair">EN SAVOIR PLUS</button>
+                        </p>
+                    </div>
+                    <div class="col-md-4 col-lg-4 col-xl b2">
+                        <h5 class="p2">Créatrice de chapeaux, coiffes et accessoires</h5>
+                        <p class="p3">
+                            Lorem elit ipsum por il dolor sit amet, consectetur par adipisicing elit,  
+                            por le incididunt vous camut labore...<br>
+                            <button class="clair">DÉCOUVRIR</button>
+                        </p>
+                    </div>
+                    <div class="col-md-4 col-lg-4 col-xl b3">
+                        <h5 class="p2">Formatrice et Animatrice d'ateliers</h5>
+                        <p class="p3">
+                            Lorem elit ipsum por dolor il sit amet, consectetur par adipisicing elit, 
+                            por le incididunt vous camut labore...<br>
+                            <button class="clair">VOIR LES DATES</button>
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
     <div id="bloc-services"> 
         <div class="container container-sm container-md container-lg container-xl">
-            <div class="row">
+            <div class="row no-gutters">
                 <div class="col col-sm col-md col-lg col-xl">
                     <div id="modules">
                         <ul>
@@ -134,22 +131,24 @@
         </div>
         <div id="bloc-encadre">
             <div class="container container-sm container-md container-lg container-xl">
-                <div class="row">
+                <div class="row no-gutters">
                     <div class="col col-sm col-md col-lg col-xl">
-                        <div class="encadre">
-                            <h2>Retouches,<br>réparations,<br>restauration<br>de vêtements</h2>
-                            <p class="p6">
-                                Lorem ipsum dolor dejndo amet, consectetur adipisicin elit, sed do eiusmod tempor por incididu...
-                                <span Class="p6tab">adipisicing elit, sed do eiusmod tempor incididu<br>
-                                nt ut labore et dolore magna aliqua. Ut enim ad<br>
-                                minim veniam, quis nostrud exercitation ullam<br>
-                                co laboris nisi ut aliquip ex ea commodo...</span>
-                            </p>
-                            <button class="clair">EN SAVOIR PLUS</button>
+                        <div id="cadre-encadre">
+                            <div class="encadre">
+                                <h2>Retouches,<br>réparations,<br>restauration<br>de vêtements</h2>
+                                <p class="p6">
+                                    Lorem ipsum dolor dejndo amet, consectetur adipisicin elit, sed do eiusmod tempor por incididu...
+                                    <span Class="p6tab">adipisicing elit, sed do eiusmod tempor incididu<br>
+                                    nt ut labore et dolore magna aliqua. Ut enim ad<br>
+                                    minim veniam, quis nostrud exercitation ullam<br>
+                                    co laboris nisi ut aliquip ex ea commodo...</span>
+                                </p>
+                                <button class="clair">EN SAVOIR PLUS</button>
+                            </div>
+                            <img class="costume1" src="img/desktop/angeliquecalfatidotcom_costumeleft.png" alt="costume dos">
+                            <img class="costume2" src="img/desktop/angeliquecalfatidotcom_costumemidle.png" alt="costume trois-quart">
+                            <img class="costume3" src="img/desktop/angeliquecalfatidotcom_costumeright.png" alt="costume face">
                         </div>
-                        <img class="costume1" src="img/desktop/angeliquecalfatidotcom_costumeleft.png" alt="costume dos">
-                        <img class="costume2" src="img/desktop/angeliquecalfatidotcom_costumemidle.png" alt="costume trois-quart">
-                        <img class="costume3" src="img/desktop/angeliquecalfatidotcom_costumeright.png" alt="costume face">
                     </div>
                 </div>
             </div>
@@ -157,32 +156,26 @@
     </div>
     <div id="bloc-boutique">
         <div class="container container-sm container-md container-lg container-xl">
-            <div class="row">
+            <div class="row no-gutters">
                 <div class="col col-sm col-md col-lg col-xl">
                     <h3>Mes créations fait main en boutique</h3>
                 </div>
             </div>
         </div>
-        <div class="container container-sm container-md container-lg container-xl">
-            <div class="row">
-                <div class="col col-sm col-md col-lg col-xl">
-                    <div id="galerie">
-                        <!-- <div class="clicg"><a href="#0"><span class="lnr lnr-chevron-left"></span></a></div> -->
-                        <ul>
-                            <li><a href="#0"><img src="img/desktop/angeliquecalfatidotcom_article1.jpg" alt="chapeau fleuri"></a></li>
-                            <li><a href="#0"><img src="img/desktop/angeliquecalfatidotcom_article2.jpg" alt="chapeau noir"></a></li>
-                            <li><a href="#0"><img src="img/desktop/angeliquecalfatidotcom_article3.jpg" alt="chapeaux rose"></a></li>
-                            <li><a href="#0"><img src="img/desktop/angeliquecalfatidotcom_article4.jpg" alt="accessoire fleuri"></a></li>
-                            <li><a href="#0"><img src="img/desktop/angeliquecalfatidotcom_desktop-article5.jpg" alt="accessoire fleuri"></a></li>
-                            <li><a href="#0"><img src="img/desktop/angeliquecalfatidotcom_desktop-article6.jpg" alt="accessoire fleuri"></a></li>
-                            <li><a href="#0"><img src="img/desktop/angeliquecalfatidotcom_desktop-article7.jpg" alt="accessoire fleuri"></a></li>
-                            <li><a href="#0"><img src="img/desktop/angeliquecalfatidotcom_desktop-article8.jpg" alt="accessoire fleuri"></a></li>
-                            <li><a href="#0"><img src="img/desktop/angeliquecalfatidotcom_desktop-article9.jpg" alt="accessoire fleuri"></a></li>
-                        </ul>
-                        <!-- <div class="clicd"><a href="#0"><span class="lnr lnr-chevron-right"></span></a></div> -->
-                    </div>
-                </div>
-            </div>
+        <div id="galerie">
+            <!-- <div class="clicg"><a href="#0"><span class="lnr lnr-chevron-left"></span></a></div> -->
+            <ul>
+                <li><a href="#0"><img src="img/desktop/angeliquecalfatidotcom_article1.jpg" alt="chapeau fleuri"></a></li>
+                <li><a href="#0"><img src="img/desktop/angeliquecalfatidotcom_article2.jpg" alt="chapeau noir"></a></li>
+                <li><a href="#0"><img src="img/desktop/angeliquecalfatidotcom_article3.jpg" alt="chapeaux rose"></a></li>
+                <li><a href="#0"><img src="img/desktop/angeliquecalfatidotcom_article4.jpg" alt="accessoire fleuri"></a></li>
+                <li><a href="#0"><img src="img/desktop/angeliquecalfatidotcom_desktop-article5.jpg" alt="accessoire fleuri"></a></li>
+                <li><a href="#0"><img src="img/desktop/angeliquecalfatidotcom_desktop-article6.jpg" alt="accessoire fleuri"></a></li>
+                <li><a href="#0"><img src="img/desktop/angeliquecalfatidotcom_desktop-article7.jpg" alt="accessoire fleuri"></a></li>
+                <li><a href="#0"><img src="img/desktop/angeliquecalfatidotcom_desktop-article8.jpg" alt="accessoire fleuri"></a></li>
+                <li><a href="#0"><img src="img/desktop/angeliquecalfatidotcom_desktop-article9.jpg" alt="accessoire fleuri"></a></li>
+            </ul>
+            <!-- <div class="clicd"><a href="#0"><span class="lnr lnr-chevron-right"></span></a></div> -->
         </div>
     </div>
     <div class="barre-contact"></div>
@@ -210,6 +203,7 @@
             </div>
         </div>
     </footer>
+
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
