--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-4 col-lg-4 col-xl b1">
+                    <div class="col-md-4 col-lg-4 col-xl-4 b1">
                         <h5 class="p2">Costumière de scène, Styliste, Couturière</h5>
                         <p class="p3">
                             Lorem elitipsum por il dolor sit amet, consectetur par adipisicing elit,  
@@ -68,7 +68,7 @@
                             <button class="clair">EN SAVOIR PLUS</button>
                         </p>
                     </div>
-                    <div class="col-md-4 col-lg-4 col-xl b2">
+                    <div class="col-md-4 col-lg-4 col-xl-4 b2">
                         <h5 class="p2">Créatrice de chapeaux, coiffes et accessoires</h5>
                         <p class="p3">
                             Lorem elit ipsum por il dolor sit amet, consectetur par adipisicing elit,  
@@ -76,7 +76,7 @@
                             <button class="clair">DÉCOUVRIR</button>
                         </p>
                     </div>
-                    <div class="col-md-4 col-lg-4 col-xl b3">
+                    <div class="col-md-4 col-lg-4 col-xl-4 b3">
                         <h5 class="p2">Formatrice et Animatrice d'ateliers</h5>
                         <p class="p3">
                             Lorem elit ipsum por dolor il sit amet, consectetur par adipisicing elit, 
@@ -138,7 +138,7 @@
                                 <h2>Retouches,<br>réparations,<br>restauration<br>de vêtements</h2>
                                 <p class="p6">
                                     Lorem ipsum dolor dejndo amet, consectetur adipisicin elit, sed do eiusmod tempor por incididu...
-                                    <span Class="p6tab">adipisicing elit, sed do eiusmod tempor incididu<br>
+                                    <span Class="p6tab">
                                     nt ut labore et dolore magna aliqua. Ut enim ad<br>
                                     minim veniam, quis nostrud exercitation ullam<br>
                                     co laboris nisi ut aliquip ex ea commodo...</span>
@@ -184,7 +184,7 @@
             <div class="row">
                 <div class="col col-sm col-md col-lg col-xl">
                     <ul>
-                        <li><a href="#"><span class="mailico"></span></a></li>
+                        <li><a href="#" title="Contactez-moi"><span class="mailico"></span></a></li>
                         <li><a href="https://www.facebook.com/angelique.calfaticostumiere" title="Suivez-moi sur Facebook" target="_blank" rel="nofollow"><span class="fbico"></span></a></li>
                     </ul>
                 </div>
@@ -192,16 +192,10 @@
         </div>
     </div>
     <footer>
-        <div class="container container-sm container-md container-lg container-xl">
-            <div class="row">
-                <div class="col col-sm col-md col-lg col-xl">
-                    <hr>
-                    <p class="p7">@ Copyright 2020 Angélique Calfati - Tous droits réservés | <a href="#0">Mentions Légales</a> | <a href="#0">Crédits</a> | 
-                    <a href="#0">Plan du site</a> | <a href="#0">CGV</a> | Désign & Développement : <a href="https//www.gidl.fr" target="_blank" rel="follow">GiDL</a>
-                    </p>
-                </div>
-            </div>
-        </div>
+        <hr>
+        <p class="p7">@ Copyright 2020 Angélique Calfati - Tous droits réservés | <a href="#0">Mentions Légales</a> | <a href="#0">Crédits</a> | 
+            <a href="#0">Plan du site</a> | <a href="#0">CGV</a> | Désign & Développement : <a href="https//www.gidl.fr" target="_blank" rel="follow">GiDL</a>
+        </p>
     </footer>
 
 
