correction button toast()

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <li><a href="#shop">BOUTIQUE<br><img src="img/mobile/mobile-menu-pattern_4e473e.png"></a></li>
                         <li><a href="#news">ATELIERS<br><img src="img/mobile/mobile-menu-arabesque_4e473e.png"></a></li>
                         <li><a href="#service">SERVICES<br><img src="img/mobile/mobile-menu-pattern_4e473e.png"></a></li>
-                        <li><a href="galeries.html#work">GALERIES<br><img src="img/mobile/mobile-menu-arabesque_4e473e.png"></a></li>
+                        <li><a href="#work">GALERIES<br><img src="img/mobile/mobile-menu-arabesque_4e473e.png"></a></li>
                         <li><a href="#about">ACTIVITÉS<br><img src="img/mobile/mobile-menu-pattern_4e473e.png"></a></li>
                         <li><a href="#contact">CONTACT<br><img src="img/mobile/mobile-menu-arabesque_4e473e.png"></a></li>
                     </ul>
@@ -235,7 +235,7 @@
         <div class="toast-header">
           <strong class="mr-auto">Merci !</strong>
           <small>À l'instant</small>
-          <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Fermer"><span aria-hidden="true">&times;</span></button>
+          <button style="width:1.275rem;"type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Fermer"><span aria-hidden="true">&times;</span></button>
         </div>
         <div  style="color:#000;" class="toast-body">
           Je reviendrai vers vous aussitôt que possible.
