--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <li><a href="#shop">BOUTIQUE<br><img src="img/mobile/mobile-menu-pattern_4e473e.png"></a></li>
                         <li><a href="#news">ATELIERS<br><img src="img/mobile/mobile-menu-arabesque_4e473e.png"></a></li>
                         <li><a href="#service">SERVICES<br><img src="img/mobile/mobile-menu-pattern_4e473e.png"></a></li>
-                        <li><a href="galeries.html#work">GALERIES<br><img src="img/mobile/mobile-menu-arabesque_4e473e.png"></a></li>
+                        <li><a href="#work">GALERIES<br><img src="img/mobile/mobile-menu-arabesque_4e473e.png"></a></li>
                         <li><a href="#about">ACTIVITÉS<br><img src="img/mobile/mobile-menu-pattern_4e473e.png"></a></li>
                         <li><a href="#contact">CONTACT<br><img src="img/mobile/mobile-menu-arabesque_4e473e.png"></a></li>
                     </ul>
