--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         <p class="p3">
                             Lorem elitipsum por il dolor sit amet, consectetur par adipisicing elit,  
                             por le incididunt vous camut labore...<br>
-                            <button class="clair">EN SAVOIR PLUS</button>
+                            <button class="clair">EN SAVOIR PLUS &raquo;</button>
                         </p>
                     </div>
                     <div class="col-md-4 col-lg-4 col-xl-4 b2">
@@ -231,7 +231,7 @@
             </div>
         </div>
     </div>
-    <div class="toast" id="toast1" data-delay="10000" style="position:absolute; z-index:2000; top:1.25rem; right:2.5rem; min-width:240px;" aria-live="assertive" aria-atomic="true">
+    <div class="toast" id="toast1" data-delay="10000" style="position:absolute; z-index:2000; top:10.875rem; right:2.5rem; min-width:240px;" aria-live="assertive" aria-atomic="true">
         <div class="toast-header">
           <strong class="mr-auto">Merci !</strong>
           <small>À l'instant</small>
